# protostar

./: .gitignore  Cargo.toml  README.md  flake.nix  mono_crash.0.0.json
app_grid/: Cargo.toml
app_grid/src/: main.rs
assets/: cartridge.blend  hex_atlas.xcf  hexagon.blend
examples/: README.md  app_grid.rs  hexagon_launcher.rs  sirius.rs
hexagon_launcher/: Cargo.toml
hexagon_launcher/res/protostar/: button.glb  cartridge.glb
hexagon_launcher/res/protostar/hexagon/: hexagon.gltf
hexagon_launcher/src/: app.rs  hex.rs  main.rs
protostar/: Cargo.toml
protostar/res/protostar/: default_icon.glb
protostar/src/: application.rs  lib.rs  xdg.rs
res/protostar/: cartridge.glb  hexagon.glb
res/protostar/hexagon/: hexagon.gltf
single/: Cargo.toml
single/src/: app.rs  app_launcher.rs  lib.rs  main.rs  single.rs
sirius/: Cargo.toml
sirius/res/protostar/hexagon/: hexagon.gltf
sirius/src/: main.rs
src/: application.rs  desktop_file.rs  lib.rs  main.rs  protostar.rs  xdg.rs
