[workspace]
resolver = "2"
members = ["hexagon_launcher", "protostar", "single", "sirius"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt", "tokio-macros", "sync"] }
serde = "1.0.219"
stardust-xr-fusion = "0.50.0"
stardust-xr-molecules = "0.50.0"
stardust-xr-asteroids = "0.50.0"
