[package]
name = "hexagon_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
protostar = { path = "../protostar" }
color-eyre = "0.6.2"
clap = "4.4.6"
manifest-dir-macros = "0.1.18"
glam = { version = "0.25.0", features = ["mint"] }
tween = "2.0.1"
tracing-subscriber = "0.3.17"
tokio = { workspace = true }
serde = { workspace = true }
stardust-xr-fusion = { workspace = true }
stardust-xr-molecules = { workspace = true }
libc = "0.2.174"
