[package]
name = "protostar"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
color-eyre = "0.6.2"
directories = "5.0.0"
dirs = "5.0.0"
ez-pixmap = "0.2.2"
freedesktop-icons-greedy = "0.2.6"
glam = { version = "0.24.0", features = ["mint"] }
image = "0.24.5"
itertools = "0.11.0"
lazy_static = "1.4.0"
linicon-theme = "1.2.0"
manifest-dir-macros = "0.1.16"
mint = "0.5.9"
nix = "0.27.1"
regex = "1.7.1"
resvg = "0.29.0"
rustc-hash = "1.1.0"
serde = "1.0.155"
serde_with = "3.3.0"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.8.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tween = "2.0.0"
ustr = "0.10.0"
walkdir = "2.3.3"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
# path = "../../core/fusion"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
# path = "../../molecules"


[dev-dependencies]
tempdir = "0.3.7"
