[package]
name = "single"
version = "0.1.0"
edition = "2021"

[dependencies]
protostar = { path = "../protostar" }
color-eyre = "0.6.2"
color-rs = "0.8.0"
clap = "4.4.6"
manifest-dir-macros = "0.1.18"
glam = "0.24.2"
mint = "0.5.9"
tween = "2.0.1"
tracing-subscriber = "0.3.17"
tokio = { workspace = true }
stardust-xr-fusion = { workspace = true }
stardust-xr-molecules = { workspace = true }
