[package]
name = "sirius"
version = "0.1.0"
edition = "2024"

[features]
tracy = ["dep:tracing-tracy", "stardust-xr-asteroids/tracy"]

[dependencies]
protostar = { path = "../protostar" }
color-eyre = "0.6.2"
clap = "4.4.6"
manifest-dir-macros = "0.1.18"
glam = { version = "0.25.0", features = ["mint"] }
mint = "0.5.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tracy = { version = "0.11.4", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
stardust-xr-fusion = { workspace = true }
stardust-xr-asteroids = { workspace = true }
tracing = "0.1.41"
walkdir = "2.4.0"
single = { path = "../single" }
